fixed accommodation display on small screens, also making sure links work on small scscreens

--- a/public/assets/stylesheet/frontend.css
+++ b/public/assets/stylesheet/frontend.css
@@ -137,3 +137,11 @@ html,body{height:100%}body{font-family:'Open Sans',sans-serif}table{margin:0}lab
 #event_page_wrap #intro{
  padding-top:0px !important;
 }
+.accommodation-container{
+ border: 1px solid #ddd;
+ border-radius: 2px;
+ margin-bottom: 10px;
+ padding-bottom: 5px;
+ padding-top: 10px;
+ background-color: #f8f8f8;
+}
